Get file list and source

--- a/frontend/app/components/sign-status.hbs
+++ b/frontend/app/components/sign-status.hbs
@@ -1,4 +1,4 @@
 <ul>
-  <li>Root: {{this.appPath}}</li>
-  <li>Full-screen: {{this.fullScreen}}</li>
+  <li>Root: {{this.signServer.appPath}}</li>
+  <li>Full-screen: {{this.signServer.fullScreen}}</li>
 </ul>
