--- a/frontend/app/templates/index.hbs
+++ b/frontend/app/templates/index.hbs
@@ -2,3 +2,8 @@
 
 <h1>Status</h1>
 <SignStatus/>
+
+<FileTree @paths={{this.signServer.fileList}} @selectFile={{this.editFile}}/>
+
+{{this.edit}}
+<SourceEditor @source={{this.source}}/>
