--- a/frontend/app/templates/index.hbs
+++ b/frontend/app/templates/index.hbs
@@ -5,5 +5,4 @@
 
 <FileTree @paths={{this.signServer.fileList}} @selectFile={{this.editFile}}/>
 
-{{this.edit}}
-<SourceEditor @source={{this.source}}/>
+<SourceEditor @filename={{this.edit}} @source={{this.source}}/>
