--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -1,22 +1,32 @@
-body {
+html, body {
+  height: 100%;
   margin: 0px;
   padding: 0px;
   font-family: sans-serif;
 }
 
-.cm-gutters {
-  border-left : 1px solid #ddd;
+body {
+  display: flex;
+  flex-direction: column;
 }
 
 .editor-container {
+  flex-grow: 1;  
+  
   display: flex;
-  border-top: 1px solid #ddd;
-  border-bottom: 1px solid #ddd;
+  border-top: 1px solid #ccc;
+  border-bottom: 1px solid #ccc;
   
   .panel-left {
     width: 240px;
-    overflow: scroll;
-    margin: 0px 2px;
+    padding: 0px 8px;
+    background: #fefcfc;
+    border-right: 1px solid #ccc;
+    
+    .sticky {
+      position: sticky;
+      top: 0;
+    }
   }
   
   .content {
@@ -24,15 +34,21 @@ body {
   }
 }
 
+.cm-gutters {
+  background-color: white !important;
+  border-right: none !important;
+}
+
 .file-tree {
-  font-family: 0.8em;
+  font-size: 0.8em;
   
   a, a:visited {
     text-decoration: none;
-    color: black;
+    color: #555;
   }
   
   ul {
+    margin-top: 8px;
     padding-left: 18px;
     list-style-type: none;
   }
@@ -44,5 +60,10 @@ body {
   li {
     white-space: nowrap;
     padding: 2px 0px;
+  }
+  
+  a > svg {
+    position: relative;
+    bottom: -3px;
   }
 }
