--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -8,19 +8,33 @@ body {
   border-left : 1px solid #ddd;
 }
 
+.editor-menu {
+  height: 21px;
+  border-bottom: 1px solid #ddd;
+  padding: 4px;
+  padding-left: 12px;
+  background: #f8f8f8;
+  color: #444;
+}
+
 .editor-container {
   display: flex;
-  border-top: 1px solid #ddd;
-  border-bottom: 1px solid #ddd;
+  position: absolute;
+  top: 30px;
+  bottom: 0px;
+  width: 100%;
   
   .panel-left {
     width: 240px;
     overflow: scroll;
-    margin: 0px 2px;
+    margin: 0px 8px;
+    overflow: scroll;
   }
   
   .content {
     width: 100%;
+    height: 100%;
+    overflow: scroll;
   }
 }
 
