--- a/frontend/app/templates/editor.hbs
+++ b/frontend/app/templates/editor.hbs
@@ -1,13 +1,13 @@
 {{page-title "Editor"}}
 
-<LinkTo @route="index">Index</LinkTo>
-<h1>App Editor <small>{{this.signServer.appPath}}</small></h1>
+<div class="editor-menu">
+  {{this.signServer.appPath}}
+  <LinkTo @route="index">Index</LinkTo>
+</div>
 
 <div class="editor-container">
   <div class="panel-left">
-    <div class="sticky">
-      <FileTree @items={{this.signServer.fileList}} @selectFile={{this.editFile}}/>
-    </div>
+    <FileTree @items={{this.signServer.fileList}} @selectFile={{this.editFile}}/>
   </div>
   <div class="content">
     {{#if this.edit}}
