--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -1,54 +1,52 @@
-html, body {
-  height: 100%;
+body {
   margin: 0px;
   padding: 0px;
   font-family: sans-serif;
 }
 
-body {
-  display: flex;
-  flex-direction: column;
+.cm-gutters {
+  border-left : 1px solid #ddd;
+}
+
+.editor-menu {
+  height: 21px;
+  border-bottom: 1px solid #ddd;
+  padding: 4px;
+  padding-left: 12px;
+  background: #f8f8f8;
+  color: #444;
 }
 
 .editor-container {
-  flex-grow: 1;  
-  
   display: flex;
-  border-top: 1px solid #ccc;
-  border-bottom: 1px solid #ccc;
+  position: absolute;
+  top: 30px;
+  bottom: 0px;
+  width: 100%;
   
   .panel-left {
     width: 240px;
-    padding: 0px 8px;
-    background: #fefcfc;
-    border-right: 1px solid #ccc;
-    
-    .sticky {
-      position: sticky;
-      top: 0;
-    }
+    overflow: scroll;
+    margin: 0px 8px;
+    overflow: scroll;
   }
   
   .content {
     width: 100%;
+    height: 100%;
+    overflow: scroll;
   }
-}
-
-.cm-gutters {
-  background-color: white !important;
-  border-right: none !important;
 }
 
 .file-tree {
-  font-size: 0.8em;
+  font-family: 0.8em;
   
   a, a:visited {
     text-decoration: none;
-    color: #555;
+    color: black;
   }
   
   ul {
-    margin-top: 8px;
     padding-left: 18px;
     list-style-type: none;
   }
@@ -60,10 +58,5 @@ body {
   li {
     white-space: nowrap;
     padding: 2px 0px;
-  }
-  
-  a > svg {
-    position: relative;
-    bottom: -3px;
   }
 }
